<resources>
    <string name="app_name">Statue Sceneform</string>
    <string name="test">Champa or Tsiompa (Cham: Campa; Vietnamese: Chăm Pa) was a collection of independent Cham polities that extended across the coast of what is today central and southern Vietnam from approximately the 2nd century AD before being absorbed and annexed by Vietnamese Emperor Minh Mạng in AD 1832.[1] The kingdom was known variously as nagara Campa (Sanskrit: नगरः चम्पः; Khmer: ចាម្ប៉ា) in the Chamic and Cambodian inscriptions, Chăm Pa in Vietnamese (Chiêm Thành in Sino-Vietnamese vocabulary) and 占城 (Zhànchéng) in Chinese records.

The Chams of modern Vietnam and Cambodia are the remnants of this former kingdom. They speak Chamic languages, a subfamily of Malayo-Polynesian closely related to the Malayic and Bali–Sasak languages.

Champa was preceded in the region by a kingdom called Lâm Ấp (Vietnamese), or Linyi (林邑, Lim Ip in Middle Chinese), that was in existence since AD 192; although the historical relationship between Linyi and Champa is not clear. Champa reached its apogee in the 9th and 10th centuries AD. Thereafter, it began a gradual decline under pressure from Đại Việt, the Vietnamese polity centered in the region of modern Hanoi. In 1832, the Vietnamese emperor Minh Mạng annexed the remaining Cham territories.

Hinduism, adopted through conflicts and conquest of territory from neighboring Funan in the 4th century AD, shaped the art and culture of the Champa kingdom for centuries, as testified by the many Cham Hindu statues and red brick temples that dotted the landscape in Cham lands. Mỹ Sơn, a former religious center, and Hội An, one of Champa\'\ main port cities, are now World Heritage Sites. Today, many Cham people adhere to Islam, a conversion which began in the 10th century, with the Royals having fully adopted the faith by the 17th century; they are called Bani Cham (from Arabic: Bani). There are, however, Balamon Cham (from Sanskrit: Brahman) who still retain and preserve their Hindu faith, rituals, and festivals. The Balamon Cham are one of only two surviving non-Indic indigenous Hindu peoples in the world, with a culture dating back thousands of years. The other is the Balinese Hinduism of the Balinese of Indonesia.[1]
    The artistic legacy of Champa consists primarily of sandstone sculptures - both sculpture in the round and relief sculpture - and brick buildings. Some metal statues and decorative items have also survived. Much of the remaining art expresses religious themes, and though some pieces would have been purely decorative, others would have served important functions in the religious life of the Chams, which synthesized elements of Hinduism (especially Saivism), Buddhism and indigenous cults.

This artistic legacy has been decimated by neglect, war, and vandalism. Much of the damage has been done in the 20th century. Some French scholars such as Henri Parmentier and Jean Boisselier were able to take photographs, create drawings, and pen descriptions of works which have been destroyed in the meantime. Neglect continues to endanger the legacy of Champa to this day, especially the neglect of the inscribed stone steles, the source of much valuable information on the history of Champa. The participants in the Vietnam War wrought their share of devastation, wiping out for example the vestiges of the Buddhist monastery at Dong Duong (Quảng Nam).[1] Willful vandalism and pilfering are an ongoing concern.

The largest collection of Cham art is on exhibit at the Museum of Cham Sculpture in Da Nang. Substantial collections are housed in the Guimet Museum in Paris, the Museum of Vietnamese History in Saigon, and the Museum of History in Hanoi. Smaller collections may be found in the Museum of Fine Arts in Saigon and the Museum of Fine Arts in Hanoi.</string>
    <string name="welcome0">Welcome to the AR application!</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="welcome1">Here is the introduction of how to use this App...</string>
    <string name="Step1">Step 1</string>
    <string name="step1">Click on the button of the statue you want</string>
    <string name="Step2">Step 2</string>
    <string name="step2">Move around one plane until you find the dots ...</string>
    <string name="click">Click on the dots ... and you find the statue</string>
    <string name="button1">My Son Statue</string>
    <string name="button2">Mamooth</string>
    <string name="button3">Pieta</string>
    <string name="button4">Vishnu</string>
    <string name="button5">Dorandar 1</string>
    <string name="button6">Gudea</string>
    <string name="button7">Renault AG 1906</string>
    <string name="text7">Renault’s Type AG, the very first Parisian taxi, would go down in history for its role in carrying troops to the Marne during the First World War.

The Type AG was designed with simplicity and robustness uppermost in mind, two qualities that would prove instrumental in bringing Renault the very first contract for taxi service in Paris. In 1905, there were 250 Type AG taxis on the roads of the French capital, rising to 1000 by 1906 and 1500 two years later. Taxi service provided valuable exposure for the Renault name and even brought recognition beyond France in 1907, Renault sold 1100 units in London.

But the Type AG is best known for its historical role in carrying troops to the front in 1914, to stem the invading Germany army’s march on Paris. Paris taxis were requisitioned, and 1300 of them would carry 6000 soldiers to win the Battle of the Marne. Thereafter the Type AG would be known as the Taxi de la Marne. Renault’s involvement in the French war effort was intense, including developments such as the first light assault vehicle, the FT17.

</string>
    <string name="text6">Approximately twenty-seven statues of Gudea, a ruler (ensi) of the state of Lagash have been found in southern Mesopotamia. Gudea ruled between c. 2144–2124 BC and the statues demonstrate a very sophisticated level of craftsmanship for the time. The known statues have been categorised \'A-AB\' by archaeologists. Many statues are headless, and there are also detached heads. Gudea is named in the dedicatory inscription carved on most statues, but in somes cases the identity of the ruler portrayed is uncertain.

 Statues A-K were found during Ernest de Sarzec\'s excavations in the court of the palace of Adad-nadin-ahhe in Telloh (ancient Girsu). Statues M-Q come from clandestine excavations in Telloh in 1924; the rest come from the art trade, with unknown provenances and sometimes of doubtful authenticity. Figures L and R do not represent Gudea with reasonable certainty.
It seems that the early statues are small and made of more local stones (limestone, steatite and redstoneer); later, when wide-ranging trade-connections had been established, the more costly exotic diorite was used. Unlike the local stone, diorite is extremely hard, and so difficult to carve. Diorite had already been used by old Sumerian rulers (Statue of Entemena). According to the inscriptions, the diorite (or gabbro, na4esi) came from Magan. The remnants of a very large diorite statue in the British Museum may be a representation of Gudea, but this cannot be determined with certainty. What remains of the statue is 1.5m high (and weighs over 1250 kg), meaning that if it was fully reconstructed the statue would be well over 3 metres high and the largest yet discovered sculpture of the ruler.[1]
</string>
    <string name="text5">The Dorand AR.1 was a World War One French two-seat observation biplane aircraft used by the French Air Force, the American Expeditionary Force and, in small numbers, by Serbian Aviation.

Designed by Captain Georges Lepère of the STAé to replace the obsolescent Farman F.40 pusher aircraft, Dorand AR-series were two-seater reconnaissance biplanes that were named after the STAé director, Lt. Col. Dorand. They were characterized by backward-staggered two-bay wings and angular all-moving tail surfaces. The pilot sat beneath the leading edge of the upper wing, with the observer\'s cockpit being under the trailing edge, and there were cut-outs in both wings to improve the latter\'s field of view. Rather unusually for a single-engine tractor biplane of the era, the lower wing was not directly attached to the fuselage, instead being somewhat below it, supported by struts.


Production of these aircraft began in a state-owned French Army Aircraft Establishment (or S.T.Aé.) factory at Chalais-Meudon, near Paris, after flight testing had been completed in the autumn 1916.

The first of the thirteen squadrons which flew Dorands on the Western Front received their aircraft in the spring 1917. Five other French squadrons used the type on the Italian Front. These aircraft were withdrawn from the combat units in early 1918.

In 1917 the American Expeditionary Force ordered the Renault-engined varieties of the Dorand, the first of 22 AR.1s being delivered in December 1917 and the first of 120 AR.2s in following February. The Americans operated these types on the Western Front for the first half 1918, until replacing them with the Salmson 2. After being retired from fighting duties, the surviving examples were used as trainers.


Dorand AR.2\'s of the first Serbian squadron
A small number of Dorand AR.1s were also supplied to Kingdom of Serbia, which operated these aircraft in four squadrons from April 1918 onwards.

While the Dorand AR-types didn\'t have a particularly distinguished career in either French or American service, having a rather mediocre performance for a late-war daytime reconnaissance aircraft and suffering from having low priority for engine supplies, it is a testimony to the general soundness of the design that after the war, many AR.1s and AR.2s appeared in the French civil register, being used as 2/3-passenger transports by companies like Compagnie Aérienne Française and Réseau Aérien Transafricain. Private users found the aircraft useful for training and joy-flights as well.

General characteristics

Crew: 2 (pilot and observer)
Length: 8.225 m (27 ft 0 in)
Wingspan: 13.3 m (43 ft 8 in)
Wing area: 50.36 m2 (542.1 sq ft)
Empty weight: 890 kg (1,962 lb)
Gross weight: 1,330 kg (2,932 lb)
Fuel capacity: 170 l (37 imp gal)
Powerplant: 1 × Renault 8Gdy V-8 water-cooled piston engine, 150 kW (200 hp)
Propellers: 2-bladed wooden fixed pitch propeller
Performance

Maximum speed: 148 km/h (92 mph, 80 kn) at 2,000 m (6,600 ft)
Endurance: 3 hours
Service ceiling: 5,500 m (18,000 ft)
Wing loading: 26.4 kg/m2 (5.4 lb/sq ft)
Power/mass: 0.143 kW/kg (0.087 hp/lb)
Armament
Guns:
1 × fixed forward-firing 7.7 mm (.303 in) Vickers machine gun for the pilot
1 or 2 × 7.7 mm (.303 in) Lewis gun(s) on a movable mounting for the observer</string>
</resources>