<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/museum"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="testButton"
                    android:background="#64C8C8"
                    android:textColor="#000000"
                    android:text="@string/button1" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:onClick="testButton2"
                    android:background="#64C8C8"
                    android:textColor="#000000"
                    android:text="@string/button2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="testButton3"
                    android:background="#64C8C8"
                    android:textColor="#000000"
                    android:text="@string/button3" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="testButton4"
                    android:background="#64C8C8"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:text="@string/button4" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="testButton5"
                    android:background="#64C8C8"
                    android:textColor="#000000"
                    android:text="@string/button5" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="testButton6"
                    android:background="#64C8C8"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:text="@string/button6" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="testButton7"
                    android:background="#64C8C8"
                    android:textColor="#000000"
                    android:text="@string/button7" />



            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</LinearLayout>