<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Step2"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="#FFFFFF"
        android:text="@string/step2"
        android:textAlignment="center"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="300dp"
            android:layout_marginStart="35dp"
            android:src="@drawable/a">
        </ImageView>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="300dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/b">
        </ImageView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:text="@string/click"
        android:textSize="30sp" />

</LinearLayout>
